Fix social buttons alignment.

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1403,7 +1403,7 @@ header {
     }
 }
 
-
 .fb_iframe_widget span {
-  height: 28px !important;
+//  height: 28px !important;
+	vertical-align: baseline !important;
 }
